--- a/index.html
+++ b/index.html
@@ -177,6 +177,12 @@
           <!--SKILLS SECTION-->
           <div id="conocimientos" class="w3-container w3-margin-top-20-percent w3-cursive">
             <h2 class="w3-border-bottom w3-border-light-green" style="border-width: 3px !important;">Conocimientos</h2> 
+            <h4>Certificaciones</h4> 
+            <ul class="w3-ul" style="font-weight: 500;">
+              <li>Angular Level 2 Certification - Interstate 21, LLC (12/2022) </li>
+              <li>Spring Boot-JPA - Desfufor S.L. (09/2022)</li>
+            </ul>
+            <br/>
              <h4>Cursos</h4> 
             <ul class="w3-ul" style="font-weight: 500;">
               <li>Angular 8 (40h) - 2019</li>
@@ -286,10 +292,8 @@
           </div>
 -->
         <!--FOOTER-->
-        <!-- Footer. This section contains an ad for W3Schools Spaces. You can leave it to support us. -->
         <footer class="w3-container w3-border-top w3-center w3-margin-top-4">
           <p>© 2022 - Sheila González</p>
-           <p class="w3-small">This website was made with W3schools Spaces.</p>
         <!-- End footer -->
         </footer>
 
