--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section>
       <!-- MOBILE NAVIGATION -->
       <div class="w3-container w3-padding-16 w3-border-bottom w3-hide-medium w3-hide-large">
-        <a href="#home" class="w3-bar-item w3-button w3-hover-none">INICIO</a>
+      <!--  <a href="#home" class="w3-bar-item w3-button w3-hover-none">INICIO</a> -->
         <a href="javascript:void(0)" class="w3-bar-item w3-button w3-right w3-hide-large w3-hide-medium" onclick="toggleNavigation()">&#9776;</a>
       </div>
       <div id="mobile-nav" class="w3-bar-block w3-hide w3-hide-large w3-hide-medium w3-sticky">
@@ -226,12 +226,12 @@
                   <br/>
                   Angular
                   <div class="w3-light-grey w3-round-xlarge">
-                    <div class="w3-container w3-light-green w3-round-xlarge" style="width:25%;height:10px;"></div>
+                    <div class="w3-container w3-light-green w3-round-xlarge" style="width:50%;height:10px;"></div>
                   </div>
                  <br/>
                   GIT
                   <div class="w3-light-grey w3-round-xlarge">
-                    <div class="w3-container w3-light-green w3-round-xlarge" style="width:50%;height:10px;"></div>
+                    <div class="w3-container w3-light-green w3-round-xlarge" style="width:60%;height:10px;"></div>
                   </div>
                   <br/>
                 </div>
@@ -261,36 +261,7 @@
 
           <!---EDUCATION SECTION-->
           <div id="intereses" class="w3-container w3-margin-top-20-percent w3-cursive">
-           
 
-            <!--REFERENCE SECTION
-            <div class="w3-container w3-margin-top-2 w3-cursive">
-              <h3 class="w3-border-amber">MY REFERENCES</h3>
-              <h4>Jane Doe, CEO at Company-Z</h4>
-              <ul class="w3-ul" style="font-weight: 500;">
-                <li>+0123456789</li>
-                <li>janedoe@companyz.com</li>
-              </ul>
-              <h4>Margaret Johnson, Manager at Company-Y</h4>
-              <ul class="w3-ul" style="font-weight: 500;">
-                <li>+9876543210</li>
-                <li>mjohnson@companyy.com</li>
-              </ul>
-            </div>            
-          </div>
-          -->
-          <!--CONTACT SECTION
-
-          <div id="contact" class="w3-container w3-margin-top-20-percent w3-cursive">
-            <h2 class="w3-border-bottom w3-border-light-green" style="border-width: 3px !important;">CONTACTO</h3>
-            <div class="w3-margin-top-2" style="font-weight: 500;">
-              <p>Sheila González Salinas</p>
-              <p>688950612</p>
-              <p>Valencia</p>
-              <p>sh.gonzal.s@gmail.com</p>
-            </div>
-          </div>
--->
         <!--FOOTER-->
         <footer class="w3-container w3-border-top w3-center w3-margin-top-4">
           <p>© 2022 - Sheila González</p>
