--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               Desarrolladora web de la Comunidad Valenciana con gran vocación por la programación y nuevas tecnologías. Estoy centrada tanto en tecnologías front-end como back-end. 
             </p>
             <p class=""> 
-              Actualmente estoy desarrollando funcionalidades como fullstack con Java y ExtJS. 
+              Actualmente estoy desarrollando funcionalidades como backend con Java y Spring Batch para una aplicación refactorizada, en la cual también participo en el análisis de los casos de uso a desarrollar basándonos en la aplicación de origen (CA Plex). 
             </p>
             <p class=""> 
               Me considero una persona con gran capacidad resolutiva, dinámica y con adaptación a nuevos entornos y dificultades, buena compañera en el trabajo en equipo y con ganas de seguir formándome y progresando en las tecnologias del desarrollo. 
@@ -117,6 +117,8 @@
                 <h4>Full-Stack Developer en Capgemini</h4>
                 <p>Julio 2021 - Presente</p>
                 <ul class="w3-ul" style="font-weight: 500;">
+                  <li>Desarrollo backend con Java 11 y Spring Batch</li>
+                  <li>Análisis de requisitos para una aplicación refactorizada (Java) en base a los casos de uso de la aplicación origen (CA Plex)</li>
                   <li>Desarrollo de front-end (ExtJS) y back-end (Java)</li>
                   <li>Mantenimiento de aplicaciones</li>
                 </ul>
